argocd_apps/webapp/test_webapp_svc.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2020-05-03T21:28:29Z"
    name: myapp
    namespace: test-webapp
    resourceVersion: "5557195"
    selfLink: /api/v1/namespaces/test-webapp/services/myapp
    uid: 084eb801-8d85-11ea-8f4c-0e634695b243
  spec:
    clusterIP: 10.100.254.11
    externalTrafficPolicy: Cluster
    ports:
    - nodePort: 30307
      port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: myapp
    sessionAffinity: None
    type: LoadBalancer
  status:
    loadBalancer:
      ingress:
      - hostname: https://kubernetes.default.svc
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
