argocd_apps/webapp/test_webapp_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx 
  name: test-webapp-ingress
  namespace: test-webapp
spec:
  rules:
  - host: personal.newzickytestcluster.missiongraph.io
    http:
      paths:
      - backend:
          serviceName: myapp
          servicePort: 80
